package helpdesk.solicitacaoservico.domain.pedido;

public enum UrgenciaPedido {
    REDUZIDA,
    MODERADA,
    URGENTE
}
